--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
             <artifactId>cglib</artifactId>
             <version>3.2.6</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.3.11.RELEASE</version>
+        </dependency>
     </dependencies>
 
 </project>
