--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,28 @@
             <version>1.6.2</version>
         </dependency>
 
+<!--        mysql-connector-j 和 mysql-connector-java 是指向同一个 MySQL 连接器的不同命名。 -->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.5.3.1 </version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <build>
