--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,17 +2,30 @@ server:
   port: 9999
 
 
-
-#jwt: data :???????JWTUtil??
-#@ConfigurationProperties("jwt.data")???
+#jwt: data :这个路径是根据JWTUtil中的
+#@ConfigurationProperties("jwt.data")配置的
 jwt:
   data:
-    #    jwt????
+    #    jwt加密密钥
     SECRET: jwt-token-secret
-    #    jwt??????Authorization????
+    #    jwt储存的请求头Authorization固定写法
     tokenHeader: Authorization
-    #      jwt?????(60s*60min*24h*7day)
+    #      jwt的过期时间(60s*60min*24h*7day)
     expiration: 604800
-    #    jwt?????????
+    #    jwt负载中拿到的头信息
     tokenHead: Bearer
 
+# sql
+spring:
+  datasource:
+    password: 123456
+    username: root
+    url: jdbc:mysql://localhost:3306/mp?characterEncoding=utf-8&&serverTime=Asia/Shanghai
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+
+# mybatisPlus
+# 开启下划线和驼峰的映射
+mybatis-plus:
+  configuration:
+    map-underscore-to-camel-case: true
