--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,17 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+<!--           <optional> true </optional>  若有子项目继承时，不传递该依赖 -->
+            <optional> true </optional>
+        </dependency>
     </dependencies>
 
     <build>
