--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.12</version>
-    </parent>
+<!--    springboot 和 spingCloud alibaba 交由dependencyManagement 管理
+       就可以使用 parent 继承公司自定义的 maven 项目
+-->
+<!--    <parent>-->
+<!-- -->
+<!--    </parent>-->
     <groupId>org.codenotknock</groupId>
     <artifactId>SpringDemo</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -22,15 +22,44 @@
     <!--    父 maven 项目，用来聚合子模块。没有src代码部分，不需被打成 jar 或 war 包-->
     <properties>
         <java.version>1.8</java.version>
+<!--        统一管理版本信息-->
+        <spring-cloud-alibaba>2.2.1.RELEASE</spring-cloud-alibaba>
+        <spring-boot-starter-parent>2.7.12</spring-boot-starter-parent>
+        <spring-cloud-dependencies>2021.0.7</spring-cloud-dependencies>
     </properties>
-    <dependencies>
-<!--        springBoot 依赖-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-    </dependencies>
+    <dependencyManagement>
+<!--        版本管理器 子模块不需要再写版本号
+ 可以确保所有子模块都使用相同的 Spring Boot 版本，并简化了维护依赖版本的工作。-->
+        <dependencies>
+            <!--    springCloud alibaba 的版本管理-->
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba</artifactId>
+                <version>${spring-cloud-alibaba}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
 
+
+            <!--    springBoot 的版本管理  或者 spring-boot-dependencies-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-parent</artifactId>
+                <version>${spring-boot-starter-parent}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <!--    springCloud alibaba 的版本管理-->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud-dependencies}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <build>
         <plugins>
             <plugin>
