--- a/stock-nacos/pom.xml
+++ b/stock-nacos/pom.xml
@@ -6,16 +6,20 @@
         <artifactId>SpringDemo</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>order</artifactId>
+    <artifactId>stock-nacos</artifactId>
     <packaging>jar</packaging>
-    <name>order</name>
+    <name>stock-nacos</name>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+        <!--        nacos-服务注册发现 依赖   不加版本号 idea 不加载 奇怪？？？-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+            <version>2021.0.4.0</version>
+        </dependency>
     </dependencies>
-    <build>
-        <finalName>order</finalName>
-    </build>
 </project>
