--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,3 +43,17 @@ server:
   port: ${myPort:8080}
 
 myPort: 9999
+
+
+# spring整合mybatis
+# 数据库相关配置
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/mySchemeTest?characterEncoding=utf-8&&serverTimezone=Asia\Shanghai
+    username: root
+    password: 123456
+# mybatis 相关配置
+mybatis:
+  mapper-locations: classpath:mapper/*Mapper.xml  # mapper 映射文件路径
+  type-aliases-package: com.codenotknock.domain # 配置包下的类有默认别名
