--- a/order-nacos/src/main/resources/application.yml
+++ b/order-nacos/src/main/resources/application.yml
@@ -7,11 +7,11 @@ spring:
     name: order-service
   cloud:
     nacos:
+      server-addr: 127.0.0.1:8848
       discovery:
-        server-addr: 127.0.0.1:8848
         username: nacos   # 登录 nacos 的用户名 默认也是 nacos
         password: nacos   # 登录 nacos 的密码 默认也是 nacos
         namespace: dev    # 命名空间 默认是 public   隔离不同的服务示例 比如dev、uat、prod 不同的环境
-
+        ephemeral: false  # 是否为临时示例   true: 临时实例   false：永久实例 即使服务挂掉依然存在
 
 
