--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>order-ribbon</module>
         <module>order-loadbalancer</module>
         <module>order-fegin</module>
+        <module>sentinel-demo</module>
     </modules>
     <!--    父 maven 项目，用来聚合子模块。没有src代码部分，不需被打成 jar 或 war 包-->
     <properties>
