[feat_1.0_springCloud_xiaofu] sentinel 的简单使用

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>order-loadbalancer</module>
         <module>order-fegin</module>
         <module>sentinel-demo</module>
+        <module>order-sentinel</module>
     </modules>
     <!--    父 maven 项目，用来聚合子模块。没有src代码部分，不需被打成 jar 或 war 包-->
     <properties>
