--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -49,6 +49,12 @@ myPort: 9999
 spring:
   mvc:
     static-path-pattern: /res/**
+  web:
+    resources:
+      static-locations:  # 修改静态资源存放路径
+        - classpath:/static1/
+        - classpath:/static2/
+        - classpath:/static3/
 
     # spring整合mybatis
     # 数据库相关配置
@@ -57,7 +63,16 @@ spring:
     url: jdbc:mysql://localhost:3306/mySchemeTest?characterEncoding=utf-8&&serverTimezone=Asia\Shanghai
     username: root
     password: 123456
+  aop:
+    proxy-target-class: false  # 切换动态代理的方式为 jdk动态代理；默认为true cglib动态代理
+    auto: false  # false 关闭 aop 功能，默认是true 开启aop功能的
+  redis:
+    port: 6379
+    host: 127.0.0.1
+
 # mybatis 相关配置
 mybatis:
   mapper-locations: classpath:mapper/*Mapper.xml  # mapper 映射文件路径
   type-aliases-package: com.codenotknock.domain # 配置包下的类有默认别名
+
+
