--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
         <module>order-fegin</module>
         <module>sentinel-demo</module>
         <module>order-sentinel</module>
+        <module>seata-demo</module>
+        <module>gateway</module>
     </modules>
     <!--    父 maven 项目，用来聚合子模块。没有src代码部分，不需被打成 jar 或 war 包-->
     <properties>
