FIX: 修复依赖错误

--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,6 @@
             <artifactId>swagger-annotations</artifactId>
             <version>1.6.2</version>
         </dependency>
-    </dependencies>
 
         <dependency>
             <groupId>net.bytebuddy</groupId>
@@ -229,3 +228,4 @@
         </plugins>
     </build>
 
+</project>
